--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.profiles.active=test
+#spring.profiles.active=test
+spring.datasource.url=jdbc:postgresql://localhost/schooldb?DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
