--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,7 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jooq</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -141,41 +138,22 @@
             </plugin>
 
             <plugin>
-                <groupId>org.jooq</groupId>
-                <artifactId>jooq-codegen-maven</artifactId>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
                 <executions>
                     <execution>
-                        <id>jooq-codegen</id>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>prepare-agent</goal>
                         </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <jdbc>
-                                <driver>org.h2.Driver</driver>
-                                <url>jdbc:h2:mem:schooldb</url>
-                                <user>test</user>
-                                <password>test</password>
-                            </jdbc>
-                            <generator>
-                                <database>
-                                    <name>org.jooq.meta.h2.H2Database</name>
-                                    <includes>.*</includes>
-                                    <excludes/>
-                                    <inputSchema>schooldb</inputSchema>
-                                </database>
-                                <generate>
-                                    <pojos>true</pojos>
-                                    <pojosEqualsAndHashCode>true</pojosEqualsAndHashCode>
-                                    <javaTimeTypes>true</javaTimeTypes>
-                                    <fluentSetters>true</fluentSetters>
-                                </generate>
-                                <target>
-                                    <packageName>com.harington.JooQ.privateshcool.model</packageName>
-                                    <directory>target/generated-sources/jooq</directory>
-                                </target>
-                            </generator>
-                        </configuration>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <phase>test</phase>
                     </execution>
                 </executions>
             </plugin>
